syntax = "proto3";

option go_package = "github.com/k-code-yt/go-api-practice/shared";

message DistanceProto {
	string ID = 1;
	double Value = 2;
	int32 Timestamp = 3;
};

message SaveInvoiceRequest {
	DistanceProto distance = 1;
};

message SaveInvoiceResponse {
	bool Success = 1;
	string Msg = 2;
};


service InvoiceTransportService {
	rpc SaveInvoice(SaveInvoiceRequest) returns (SaveInvoiceResponse);
};


message GetInvoiceRequest {
	string ID = 1;
};

message InvoiceProto {
	string ID = 1;       
	double Amount   =2;
	string Category = 3;
};


message GetInvoiceResponse {
	InvoiceProto invoice = 1;
};


service GetterInvoiceTransportService {
	rpc GetInvoice(GetInvoiceRequest) returns (GetInvoiceResponse);
};